# dimos

./: .gitignore  .pre-commit-config.yaml  NEWREADME.MD  README.md  README_installation.md  api_research_log.md  changes.md  flake.nix  index.html  pyproject.toml  requirements.txt  standalone_perception.py  uv.lock.REMOVED.git-id
.github/workflows/: docker.yml  fast-docs.yml  tests.yml
.openclaw/: smart_nav_state.json
autoresearch/: GUIDELINES.md  eval.py  optimizations.py  program.md
dimos/agents/: agent.py  cerebras_agent.py  test_agent_tools.py
dimos/agents2/: agent.py  test_agent.py  test_agent_fake.py  test_mock_agent.py  testing.py
dimos/control/: coordinator.py  hardware_interface.py
dimos/core/: __init__.py  blueprints.py  docker_build.py  docker_runner.py  docker_worker_manager.py  global_config.py  module.py  module_coordinator.py  native_module.py  native_rebuild_perf_test.py  resource.py  resource_logger.py  rpc_client.py  shared_memory_transport.py  stream.py  test_blueprints.py  test_native_rebuild.py  test_worker.py  transport.py  worker.py  worker_manager.py
dimos/dashboard/: rerun_init.py
dimos/e2e_tests/: test_dimsim_nav.py
dimos/grasping/: README.md  __init__.py  blueprints.py  conversions.py  graspgen_module.py  gripper_adapter.py
dimos/hardware/: ardupilot.py  ft_pull_skill.py  ufactory.py  webcam.py
dimos/manipulation/: blueprints.py  manipulation_blueprints.py  manipulation_module.py  test_manipulation_unit.py
dimos/mapping/: costmapper.py  spec.py  test_voxels.py  voxels.py
dimos/memory/: __init__.py  architecture.md  backend.py  embed.py  embeddings.md  filter.py  intro.md  rerun.py  store.py  stream.py  test_blobstore.py  test_buffer.py  test_e2e_import.py  test_e2e_query.py  test_embedding.py  test_impl.py  test_save.py  test_stream.py  test_stream_repr.py  transform.py  transformer.py  types.py  viz.py
dimos/memory2/: README.md  __init__.py  architecture.md  backend.py  embed.py  embeddings.md  filter.py  module.py  store.py  stream.py  streaming.md  test_e2e.py  test_embedding.py  test_impl.py  test_module.py  test_save.py  test_stream.py  test_visualizer.py  test_voxel_map.py  transform.py  type.py  voxel_map.py
dimos/memory_old/: embedding.py
dimos/navigation/: dimos_module_entrypoint.sh  rosnav.py  rosnav_docker.py  rosnav_legacy.py  spec.py  test_rosnav_docker.py
dimos/navigation/smart_nav/modules/far_planner/repo/: CMakeLists.txt  flake.nix  main.cpp
dimos/navigation/smart_nav/modules/far_planner/repo/include/far_planner/: compat.h  graph_msger.h  planner_visualizer.h  utility.h
dimos/navigation/smart_nav/modules/far_planner/repo/src/: contour_graph.cpp  utility.cpp
dimos/perception/: demo_object_scene_registration.py  manip_aio_pipeline.py  object_detection_stream.py  object_scene_registration.py  object_tracker.py  object_tracker_2d.py  spatial_perception.py  spec.py
dimos/record/: record_replay.py
dimos/robot/: all_blueprints.py  config.py  foxglove_bridge.py  robot.py  ros_control.py  test_all_blueprints.py
dimos/simulation/: sim_blueprints.py  subscribe_topic.py
dimos/skills/: navigation.py
dimos/spec/: utils.py
dimos/stream/: video_operators.py
dimos/types/: costmap.py  test_timestamped.py  timestamped.py
dimos/utils/: change_detect.py  dask_frame_cluster.py  data.py  generic.py  gpu_utils.py  ipc_factory.py  multirate.py  o3d.py  safe_thread_map.py  test_change_detect.py
dimos/visualization/: __init__.py  ros_rerun_bridge.py  vis_module.py
dimos/wip_viz/: dimos_dashboard.py
docker/dev/: Dockerfile
docker/navigation/: Dockerfile  README.md  build.sh  docker-compose.yml  start.sh
docker/python/: Dockerfile
docs/: DIMOS_ARCHITECTURE.md  DIMOS_QUICK_REFERENCE.md  VIEWER_BACKENDS.md  development.md
docs/concepts/: blueprints.md  modules.md  skills.md
docs/development/: conventions.md
docs/tutorial/: modules.md
examples/twitch_plays/: README.md  run_odom_turns.py
installer/: .gitignore  README.md  main.ts
installer/build_scripts/: create_dep_database.py  test_docker
installer/phases/: 00_logo_and_basic_checks.ts  01_all_system_dependencies.ts  02_check_absolutely_necessary_tools.ts  03_pip_install_dimos.ts  04_dimos_check.ts  05_env_setup.ts
installer/support/: dax.ts  misc.ts  (+3 more)
native/rust/: Cargo.toml
native/rust/examples/: native_rust_example.rs
native/rust/src/: lib.rs
scripts/: run_inference.py  run_inference_loop.py
tests/: agent_manip_flow_flask_test.py  test_agent_huggingface_local.py  test_cerebras_agent_skills.py  test_claude_agent_skills_query.py  test_e2e_daemon.py  test_planning_agent.py
(+352 files in other folders)
