[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — modular robotics and agent orchestration framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "dimos contributors" }
]
keywords = ["robotics", "agents", "orchestration", "ros2", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.27",
  "openai>=1.30",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "typer>=0.12",
  "reactivex>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
ros2 = [
  "rclpy",
]
vision = [
  "opencv-python>=4.10",
  "Pillow>=10.0",
  "numpy>=1.26",
]

[project.scripts]
dimos = "dimos.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=dimos --cov-report=term-missing"

[tool.coverage.run]
source = ["src/dimos"]
